--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <div class="container">
-            <h1>Odin Recepies</h1>
+            <h1>Odin Recipes</h1>
             <a href="recipes/linguini-with-roasted-broccoli-pesto.html">Linguini with Roasted Broccoli Pesto</a>
         </div>
     </body>
