Add css and restructure htmls

--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
         <meta charset="utf-8">
         <meta name="author" content="Anshul Gupta">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
-        <div class="container">
+        <header>
             <h1>Odin Recipes</h1>
+        </header>
+        <div class="container">
+            <section class="recipes">
             <a href="recipes/linguini-with-roasted-broccoli-pesto.html">Linguini with Roasted Broccoli Pesto</a>
+            </section>
         </div>
+        <footer>
+            <p>Referenced from <a href="https://www.allrecipes.com/" target="_blank"><strong>allrecipes</strong></a></p>
+        </footer>
     </body>
 </html>
